@@ -12,5 +12,5 @@ include $(top_srcdir)/../../bsp.am
 
 EXTRA_DIST = bsp_specs
 
-include $(top_srcdir)/../../../../../../automake/subdirs.am
-include $(top_srcdir)/../../../../../../automake/local.am
+include $(top_srcdir)/../../../../automake/subdirs.am
+include $(top_srcdir)/../../../../automake/local.am
