@@ -22,4 +22,4 @@ TMPINSTALL_FILES = $(PROJECT_INCLUDE) \
 
 all-local: $(TMPINSTALL_FILES)
 
-include $(top_srcdir)/../../../../../../automake/local.am
+include $(top_srcdir)/../../../../automake/local.am
